src/app/components/Header/Header.scss
@import '../../variables.scss';

// Header position has to fixed as the user scrolls to the right. Because of a limitation in react-beautiful-dnd library
// the drag-drop context can only have one scroll container so the entire board has to be scrolled. Therefore,
// header has to be part of the page that is being scrolled and as a workaround we use position:fixed.

header {
  font-family: 'Lato', sans-serif;

  font-weight: normal;
  position: fixed;
  display: flex;
  justify-content: space-between;
  align-items: center;
  flex-shrink: 0;
  box-sizing: border-box;
  width: 100%;
  height: 80px;
  padding: 5px;
  background: rgba(255, 255, 255, 0.3);
  z-index: 1;
  transition: background 0.3s;
}

.header-title {
  display: inline-flex;
  align-items: center;
  font-size: 22px;
  text-decoration: none;
  color: #1594b4;

  img {
    margin-right: 10px;
  }

  b {
    font-weight: 700;
    color: rgb(29, 115, 103);
  }

  span {
    color: #1c468c;
    margin-left: 10px;
  }
}

.header-title img {
  height: 30px;
}

.header-right-side {
  display: flex;
  justify-content: space-around;
  align-items: center;
  box-sizing: border-box;
  height: 100%;
  color: white;
}

.user-thumbnail {
  height: 28px;
  border-radius: 3px;
}

.guest-icon {
  padding-top: 2px;
  font-size: 24px;
}

.signout-link {
  padding: 3px 5px 1px 5px;
  margin-left: 12px;
  color: $grey;
  text-decoration: none;
}

.signout-icon {
  padding-bottom: 2px;
  font-size: 22px;
}

// Some things have to be removed for mobile layouts to avoid overflowing
@media (max-width: 700px) {
  .user-thumbnail,
  .guest-icon {
    display: none;
  }

  .signout-link {
    margin-left: 0px;
  }
}

